[project]
name = "smsboom-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anyio==3.5.0 ; python_full_version >= '3.6.2'",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.12 ; python_full_version >= '3.5'",
    "click==8.1.2",
    "colorama==0.4.4 ; sys_platform == 'win32'",
    "h11==0.12.0 ; python_full_version >= '3.6'",
    "httpcore==0.14.7 ; python_full_version >= '3.6'",
    "httpx==0.22.0",
    "idna==3.3",
    "loguru==0.6.0",
    "pydantic==1.9.0",
    "requests>=2.32.4",
    "rfc3986[idna2008]==1.5.0",
    "sniffio==1.2.0 ; python_full_version >= '3.5'",
    "typing-extensions==4.2.0 ; python_full_version >= '3.7'",
    "win32-setctime==1.1.0 ; sys_platform == 'win32'",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "anyio==3.5.0 ; python_full_version >= '3.6.2'",
    "babel==2.10.1 ; python_full_version >= '3.6'",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.12 ; python_full_version >= '3.5'",
    "click==8.1.2",
    "colorama==0.4.4 ; sys_platform == 'win32'",
    "flask~=2.1.2",
    "flask-admin==1.6.0",
    "flask-babelex==0.9.4",
    "flask-sqlalchemy==2.5.1",
    "h11==0.12.0 ; python_full_version >= '3.6'",
    "httpcore==0.14.7 ; python_full_version >= '3.6'",
    "httpx==0.22.0",
    "idna==3.3",
    "importlib-metadata==4.11.3 ; python_full_version < '3.10'",
    "itsdangerous==2.1.2 ; python_full_version >= '3.7'",
    "jinja2==3.1.1 ; python_full_version >= '3.7'",
    "legacy-cgi==2.6.4 ; python_full_version >= '3.13'",
    "loguru==0.6.0",
    "markupsafe==2.1.1 ; python_full_version >= '3.7'",
    "playwright>=1.48.0",
    "playwright-stealth>=1.0.6",
    "pydantic==1.9.0",
    "pytz==2022.1",
    "rfc3986[idna2008]==1.5.0",
    "sniffio==1.2.0 ; python_full_version >= '3.5'",
    "speaklater==1.3",
    "sqlalchemy==1.4.35 ; python_full_version >= '2.7'",
    "typing-extensions==4.2.0 ; python_full_version >= '3.7'",
    "werkzeug~=2.1.2 ; python_full_version >= '3.7'",
    "win32-setctime==1.1.0 ; sys_platform == 'win32'",
    "wtforms==3.0.1 ; python_full_version >= '3.7'",
    "zipp==3.8.0 ; python_full_version >= '3.7'",
]
